--- a/packages/bathroom_humidity.yaml
+++ b/packages/bathroom_humidity.yaml
@@ -2,12 +2,12 @@ binary_sensor:
   - platform: trend
     sensors:
       master_bathroom_humidity_rising:
-        entity_id: sensor.humidity_158d00023475b0
+        entity_id: sensor.main_bath_room_humidity
         friendly_name: Master Bathroom Humidity Rising
         sample_duration: 7200
         min_gradient: 0.02
       master_bathroom_humidity_falling:
-        entity_id: sensor.humidity_158d00023475b0
+        entity_id: sensor.main_bath_room_humidity
         friendly_name: Master Bathroom Humidity Falling
         sample_duration: 7200
         min_gradient: -0.01
@@ -16,10 +16,10 @@ automation:
   - alias: "Turn on Master Bathroom Fan"
     trigger:
       - platform: state
-        entity_id: sensor.humidity_158d00023475b0, sensor.humidity_158d00020177c3   # 1st bathroom 2nd master bedroom
+        entity_id: sensor.main_bath_room_humidity, sensor.main_bed_room_humidity   # 1st bathroom 2nd main bedroom
     condition:
       - condition: template
-        value_template: "{{ (states.sensor.humidity_158d00023475b0.state|float - states.sensor.humidity_158d00020177c3.state|float > 15) or (states.sensor.humidity_158d00023475b0.state|float == 99.9) or states.binary_sensor.master_bathroom_humidity_rising.attributes['gradient']|float > 0.04 }}"
+        value_template: "{{ (states.sensor.main_bath_room_humidity.state|float - states.sensor.main_bed_room_humidity.state|float > 15) or (states.sensor.main_bath_room_humidity.state|float == 99.9) or states.binary_sensor.master_bathroom_humidity_rising.attributes['gradient']|float > 0.04 }}"
       - condition: state  # 'day' condition: from sunrise until sunset
         entity_id: sun.sun
         state: 'above_horizon'
@@ -30,13 +30,13 @@ automation:
   - alias: "Turn off Master Bathroom Fan"
     trigger:
       - platform: state
-        entity_id: sensor.humidity_158d00023475b0, sensor.humidity_158d00020177c3   # 1st bathroom 2nd master bedroom
+        entity_id: sensor.main_bath_room_humidity, sensor.main_bed_room_humidity   # 1st bathroom 2nd main bedroom
       - platform: time_pattern
         # You can also match on interval. This will match every 5 minutes
         minutes: "/10"
     condition:
-      - condition: template # bathroom vs outside
-        value_template: "{{states.sensor.humidity_158d00023475b0.state|float - states.sensor.humidity_158d00020177c3.state|float < 13 and states.light.sonoff_master_bathroom_1.state == 'on' and states.binary_sensor.master_bathroom_humidity_falling.state == 'off' and states.binary_sensor.master_bathroom_humidity_rising.state == 'off'}}"
+      - condition: template # bathroom vs main bedroom
+        value_template: "{{states.sensor.main_bath_room_humidity.state|float - states.sensor.main_bed_room_humidity.state|float < 13 and states.light.sonoff_master_bathroom_1.state == 'on' and states.binary_sensor.master_bathroom_humidity_falling.state == 'off' and states.binary_sensor.master_bathroom_humidity_rising.state == 'off'}}"
       - condition: state  # 'day' condition: from sunrise until sunset
         entity_id: sun.sun
         state: 'above_horizon'
