--- a/packages/tasmota_zigbee.yaml
+++ b/packages/tasmota_zigbee.yaml
@@ -56,6 +56,7 @@ sensor:
   state_topic: "tele/zigbee/0x9870/Battery"  
   expire_after: 7200   #v0.100 and above
   device_class: battery
+  unit_of_measurement: '%'
 
 #TH Braai
 - platform: mqtt
@@ -76,6 +77,7 @@ sensor:
   state_topic: "tele/zigbee/0x7064/Battery"  
   expire_after: 7200   #v0.100 and above
   device_class: battery
+  unit_of_measurement: '%'
 
 #TH Scullery
 - platform: mqtt
@@ -96,6 +98,7 @@ sensor:
   state_topic: "tele/zigbee/0x785A/Battery"  
   expire_after: 7200   #v0.100 and above
   device_class: battery
+  unit_of_measurement: '%'
   
 #TH Main bed
 - platform: mqtt
@@ -116,6 +119,7 @@ sensor:
   state_topic: "tele/zigbee/0x632C/Battery"  
   expire_after: 7200   #v0.100 and above
   device_class: battery
+  unit_of_measurement: '%'
   
 #TH Main bath
 - platform: mqtt
@@ -136,6 +140,7 @@ sensor:
   state_topic: "tele/zigbee/0x75D2/Battery"  
   expire_after: 7200   #v0.100 and above
   device_class: battery
+  unit_of_measurement: '%'
 
 #TH Lounge
 - platform: mqtt
@@ -156,6 +161,7 @@ sensor:
   state_topic: "tele/zigbee/0x4D67/Battery"  
   expire_after: 7200   #v0.100 and above
   device_class: battery
+  unit_of_measurement: '%'
 
 #TH Fridge
 - platform: mqtt
@@ -176,6 +182,7 @@ sensor:
   state_topic: "tele/zigbee/0x2C10/Battery"  
   expire_after: 7200   #v0.100 and above
   device_class: battery
+  unit_of_measurement: '%'
 
 #TH Baby room
 - platform: mqtt
@@ -196,6 +203,7 @@ sensor:
   state_topic: "tele/zigbee/0xC46A/Battery"  
   expire_after: 7200   #v0.100 and above
   device_class: battery
+  unit_of_measurement: '%'
 
 automation:
   ## Zigbee2tasmota MQTT demultiplexer automations
