harmony conf changed...need to ingore really

--- a/harmony_8763167.conf
+++ b/harmony_8763167.conf
@@ -3,51 +3,9 @@
         "-1": "PowerOff",
         "20505574": "Watch TV",
         "20505630": "Listen to Music",
-        "20505703": "Watch a movie",
         "24535516": "DroidTV"
     },
     "Devices": {
-        "BeeLink Media Player": {
-            "commands": [
-                "PowerToggle",
-                "0",
-                "1",
-                "2",
-                "3",
-                "4",
-                "5",
-                "6",
-                "7",
-                "8",
-                "9",
-                "Clear",
-                "Mute",
-                "VolumeDown",
-                "VolumeUp",
-                "DirectionDown",
-                "DirectionLeft",
-                "DirectionRight",
-                "DirectionUp",
-                "OK",
-                "SkipBack",
-                "SkipForward",
-                "Return",
-                "Menu",
-                "MyMusic",
-                "Green",
-                "Red",
-                "Blue",
-                "Yellow",
-                "1/a",
-                "Apps",
-                "Browser",
-                "Home",
-                "Media",
-                "Mouse",
-                "Web"
-            ],
-            "id": "42234896"
-        },
         "Computer": {
             "commands": [],
             "id": "48811101"
@@ -91,6 +49,7 @@
                 "Teletext",
                 "Favorite",
                 "LiveTv",
+                "Sleep",
                 "Green",
                 "Red",
                 "Blue",
@@ -117,6 +76,7 @@
                 "MyApps",
                 "ServiceMenu",
                 "Simplink",
+                "SmartMenu",
                 "T.Option",
                 "Tv/Radio",
                 "UserGuide"
@@ -131,64 +91,6 @@
                 "Timer"
             ],
             "id": "42254696"
-        },
-        "Microsoft Windows Media Center": {
-            "commands": [
-                "PowerOff",
-                "PowerOn",
-                "PowerToggle",
-                "Enter",
-                "*",
-                ".",
-                "0",
-                "1",
-                "2",
-                "3",
-                "4",
-                "5",
-                "6",
-                "7",
-                "8",
-                "9",
-                "#",
-                "Clear",
-                "Mute",
-                "VolumeDown",
-                "VolumeUp",
-                "ChannelPrev",
-                "ChannelDown",
-                "ChannelUp",
-                "DirectionDown",
-                "DirectionLeft",
-                "DirectionRight",
-                "DirectionUp",
-                "OK",
-                "Stop",
-                "Play",
-                "Rewind",
-                "Pause",
-                "FastForward",
-                "Record",
-                "Replay",
-                "Skip",
-                "Back",
-                "Menu",
-                "Subtitle",
-                "Audio",
-                "Live",
-                "RecordedTV",
-                "MediaCenter",
-                "Music",
-                "Pictures",
-                "Radio",
-                "Videos",
-                "Guide",
-                "Info",
-                "Exit",
-                "Aspect",
-                "Movies"
-            ],
-            "id": "36587964"
         },
         "Sony AV Receiver": {
             "commands": [
@@ -260,6 +162,66 @@
                 "TestTone"
             ],
             "id": "36588415"
+        },
+        "Sony KD-55X7500H": {
+            "commands": [
+                "PowerOff",
+                "PowerOn",
+                "PowerToggle",
+                "0",
+                "1",
+                "2",
+                "3",
+                "4",
+                "5",
+                "6",
+                "7",
+                "8",
+                "9",
+                "Mute",
+                "VolumeDown",
+                "VolumeUp",
+                "ChannelPrev",
+                "ChannelDown",
+                "ChannelUp",
+                "DirectionDown",
+                "DirectionLeft",
+                "DirectionRight",
+                "DirectionUp",
+                "Select",
+                "Menu",
+                "Back",
+                "Teletext",
+                "Favorite",
+                "PictureMode",
+                "SoundMode",
+                "Sleep",
+                "Green",
+                "Red",
+                "Blue",
+                "Yellow",
+                "Guide",
+                "Info",
+                "Aspect",
+                "PictureMode",
+                "Freeze",
+                "InputATV",
+                "InputDTV",
+                "InputNext",
+                "InputTuner",
+                "InputVideo1",
+                "InputVideo2",
+                "InputVideo3",
+                "InputVideo4",
+                "InputVideo5",
+                "InputVideo6",
+                "PowerSaving",
+                "TeletextHold",
+                "TeletextPageDown",
+                "TeletextPageUp",
+                "TeletextReveal"
+            ],
+            "id": "71962616"
         },
         "Telkom Media Player": {
             "commands": [
