add synology dsm debug logging

--- a/includes/logger.yaml
+++ b/includes/logger.yaml
@@ -25,3 +25,6 @@ logs:
 
   # debug zeroconf
   homeassistant.components.zeroconf: debug
+
+  # https://github.com/home-assistant/core/issues/42555#issuecomment-719922665
+  homeassistant.components.synology_dsm: debug
